Multiple fixes for dark mode

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -849,7 +849,6 @@ ion-icon {
 
 .line-divider {
   box-sizing: border-box;
-  border: 0.5px solid #9ba3ae;
-  opacity: 0.1;
+  border: 0.5px solid rgba(155, 163, 174, 0.1);
   margin: 0px 25px;
 }
